fix: english styling and whitespacing

--- a/src/css/english.css
+++ b/src/css/english.css
@@ -3,3 +3,8 @@
   left: -6px;
 }
 
+@media (min-width: 770px) { 
+  .info__text-skills-container {
+    margin-bottom: 45px;
+  }
+}
